<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="20dp">
    <LinearLayout
        android:id="@+id/linear_layout_info_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/backArrow_setting_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@drawable/backarrow" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_silahkan_isi_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_isi_data"
        android:paddingBottom="82dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/linear_layout_info_back"
        />

    <EditText
        android:id="@+id/email_edit_text_info"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/email"
        android:inputType="number"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/text_silahkan_isi_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/nik_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/nik"
        android:inputType="number"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/nama_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/nama_lengkap"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/nik_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/no_rumah_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/nomor_rumah"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/nama_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/telefon_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/nomor_telepon"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="23dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/no_rumah_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/gaji_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="Pendapatan Keluarga Pertahun"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="23dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/telefon_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selesai"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-thin"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:layout_constraintTop_toBottomOf="@id/gaji_edit_text"
        app:cornerRadius="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>