<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:paddingTop="50dp"
        android:id="@+id/text_input_email"
        android:text="@string/silahkan_masukan_email_anda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textSize="23sp"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_explain"
        android:text="@string/forgot_password_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/cloudy"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        app:hintAnimationEnabled="true"
        app:endIconMode="clear_text">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kirim"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-thin"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:layout_constraintTop_toBottomOf="@id/lupa_password_button"
            app:cornerRadius="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>