<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:paddingTop="50dp"
            android:id="@+id/text_daftar"
            android:text="@string/daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:textSize="23sp"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linear_Layout_signup_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/text_daftar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:id="@+id/sudah_punya_akun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/buat_baru_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_disini"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout_signup_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_email"
            app:hintAnimationEnabled="true"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_Layout_signup_1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout_signup_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/email_layout_signup_1"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="105dp"
            android:fontFamily="sans-serif-thin"
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:layout_constraintTop_toBottomOf="@id/password_layout_signup_1"
            app:cornerRadius="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>