<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thirdFragment">

    <LinearLayout
        android:id="@+id/linear_Layout_show_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout_show_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="5dp">
            <ImageView
                android:id="@+id/backArrow_show_button"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/backarrow" />
        </LinearLayout>
        <TextView
            android:id="@+id/pengaturan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubah_informasi"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/cloudy"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Layout_show_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp"
        app:layout_constraintStart_toStartOf="@id/linear_Layout_show_1"
        app:layout_constraintTop_toBottomOf="@id/linear_Layout_show_1">


        <LinearLayout
            android:id="@+id/linear_Layout_show_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            >

            <ImageView
                android:id="@+id/show_nik_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/idcard"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:id="@+id/show_nik_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_nik_value"
                android:paddingTop="2dp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
                <TextView
                    android:id="@+id/show_nik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_nik"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textSize="7sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/cloudy"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_Layout_show_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            >

            <ImageView
                android:id="@+id/show_name_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/iconprofil"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/show_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_name_value"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textSize="7sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/cloudy"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_Layout_show_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            >

            <ImageView
                android:id="@+id/show_alamat_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/iconhomeshowdata"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/show_alamat_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_alamat_value"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/show_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nomor Rumah"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textSize="7sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/cloudy"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_Layout_show_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            >

            <ImageView
                android:id="@+id/show_telp_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ictelphone"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/show_telp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_phone_number_value"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/show_telp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textSize="7sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/cloudy"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_Layout_show_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            >

            <ImageView
                android:id="@+id/show_gaji_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_dollar"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/show_gaji_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_gaji_value"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/show_gaji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_gaji"
                    android:paddingTop="2dp"
                    android:paddingStart="10dp"
                    android:textSize="7sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@color/cloudy"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Layout_show_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_Layout_show_2">
    <TextView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/blue_200"/>
        <ImageView
            android:id="@+id/edit_button_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/edit"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>