<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/linear_layout_show_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:paddingStart="5dp">
                <ImageView
                    android:id="@+id/backArrow_show_button"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/backarrow" />
            </LinearLayout>
                <TextView
                    android:id="@+id/pengaturan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubah_sandi"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/cloudy"
                    android:layout_marginStart="10dp"
                    />
        </LinearLayout>


            <TextView
                android:id="@+id/text_input_email"
                android:text="@string/silahkan_masukan_password_baru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:textSize="23sp"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_password"
                app:hintAnimationEnabled="true"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_explain"
                android:text="@string/explain_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/cloudy"
                android:fontFamily="sans-serif-thin"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_password"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="60dp"
                android:fontFamily="sans-serif-thin"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:layout_constraintTop_toBottomOf="@id/lupa_password_button"
                app:cornerRadius="10dp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>